--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@types/react-dom": "18.0.0",
     "@types/react-is": "17.0.3",
     "@types/react-virtualized-auto-sizer": "^1.0.1",
+    "@types/react-window": "^1.8.5",
     "@types/styled-components": "5.1.25",
     "@types/ua-parser-js": "^0.7.36",
     "@typescript-eslint/eslint-plugin": "~5.18.0",
